# python-reversi

./: README.md  data_generation.ipynb  data_view.ipynb  environment.yaml  example.ipynb  model_compare.ipynb  pyproject.toml  python-reversi.pyproj  python-reversi.sln  requirements.txt  requirements.yml  solve.py
.github/workflows/: python-package-conda.yml  python-package.yml
data/: Edax4.4_level_0_vs_Edax4.4_level_0_from_e54.gs  Edax4.4_level_10_vs_Edax4.4_level_10_from_e54.gs  Edax4.4_level_15_vs_Edax4.4_level_15_from_e54.gs  Edax4.4_level_1_vs_Edax4.4_level_1_from_e54.gs  Edax4.4_level_5_vs_Edax4.4_level_5_from_e54.gs  Edax4.4_selfplay_level_1_from_e54.gs  Edax4.4_selfplay_level_20_from_e54.gs  endgame.pos  fforum-1-19.pos  fforum-20-39.pos  fforum-40-59.pos  fforum-60-79.pos  random_selfplay_from_e54.gs
reversi/: Untitled.ipynb  __init__.py  perft.py
reversi/base/: __init__.py  bit_manipulation.py  interval.py
reversi/board/: __init__.py  bitboard.py  field.py  moves.py  play.py  position.py
reversi/core/: __init__.py  bit_manipulation.py  field.py  game.py  game_generator.py  game_score.py  hashtable.py  interval.py  moves.py  position.py  position_score.py  score.py
reversi/engine/: __init__.py  cassandra.py  edax.py  engine.py
reversi/game/: filter.py  game.py  game_generator.py  intensity.py  player.py  score.py  scored_position.py
reversi/in_out/: __init__.py  board_painter.py  draw.py  file.py  png.py  position_setup.py  string.py  wx_painter.py
reversi/io/: __init__.py  file.py  png.py
tests/: benchmark.py  test_perft.py
(+89 files in other folders)
