[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "reversi"
version = "1.0.1"

[tool.ruff]
line-length = 100

[tool.pylint]
disable = [
    "C0114",  # Missing module docstring
    "C0115",  # Missing class docstring
    "C0116",  # Missing function or method docstring
]
