[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "reversi"
version = "1.0.1"
requires-python = ">= 3.10"
dependencies = [
    # Runtime dependencies
    "numpy",
    "pillow",
    "edax @ git+https://github.com/dominichofer/python-edax",
    # Test dependencies
    "pytest",
    "parameterized",
]

[tool.ruff]
line-length = 100

[tool.pylint]
disable = [
    "C0114",  # Missing module docstring
    "C0115",  # Missing class docstring
    "C0116",  # Missing function or method docstring
]
